core/tests/ui/mast_forest_immutable/debug_info_mut.stderr
error[E0599]: no method named `debug_info_mut` found for struct `MastForest` in the current scope
 --> tests/ui/mast_forest_immutable/debug_info_mut.rs:5:30
  |
5 |     let _debug_info = forest.debug_info_mut();
  |                              ^^^^^^^^^^^^^^
  |
help: there is a method `debug_info` with a similar name
  |
5 -     let _debug_info = forest.debug_info_mut();
5 +     let _debug_info = forest.debug_info();
  |
